--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="item text3"> 
                 <h3>موضع
                 </h3>
-                <p>لدھیوالاوڑائچ
+                <p>لدھیوالہ وڑائچ
                 </p>
             </div>
             <div class="item text4">
@@ -70,7 +70,7 @@
             <div class="item text1">
                 <h3>کل رقبہ منتقلہ
                 </h3>
-                <p>0-8-8<p>  آٹھ مرلہ آٹھ فٹ   </p>
+                <p>8-8-0<p>آٹھ کنال آٹھ مرلہ</p>
             </div>
             <div class="item text2"><h3>تریخ فیصلہ
 
