--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="item text4">
                 <h3>نام اجراء کنندہ
                 </h3>
-                <p>شمشاد احمد ولد کرم دین
+                <p>شمشاد احمد ولد کرم دین ایڈووکیٹ
                 </p>
             </div>
             
